--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <!-- header -->
     <header class="header">
-      <div class="follow"><a href="#">Follow @thanhkimsang</a></div>
+      <div class="follow">
+        <a href="t.me/thanhkimsang">Follow @thanhkimsang</a>
+      </div>
       <div class="header__content grid-container">
         <h1 class="heading-primary">Grid by Example</h1>
         <p class="header__description">
