--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- header -->
     <header class="header">
       <div class="follow">
-        <a href="t.me/thanhkimsang">Follow @thanhkimsang</a>
+        <a href="https://t.me/thanhkimsang">Follow @thanhkimsang</a>
       </div>
       <div class="header__content grid-container">
         <h1 class="heading-primary">Grid by Example</h1>
